<resources>
    <string name="app_name">Educational Platform</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_list_is_loading">Course list is loading. Please wait for a moment.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created_with_colon">Created:</string>
    <string name="zero">0</string>
    <string name="created_time">2022-04-16</string>
    <string name="likes_with_colon">Likes:</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_banner">Please sign up to continue</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="login_banner">Please login to continue</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="id">Id</string>
    <string name="topic_list_is_loading">Topic list is loading. Please wait a moment.</string>
    <string name="step_list_with_colon">Step List:</string>
    <string name="category">Category</string>
    <string name="publisher_with_colon">Publisher:</string>
    <string name="publisher_name">Kambar</string>
    <string name="step_description">Step description</string>
    <string name="views_with_colon">Views:</string>
    <string name="step">Step</string>
    <string name="step_with_colon">Step:</string>
    <string name="description_with_colon">Description:</string>
    <string name="course_content_with_colon">Course content:</string>
    <string name="like_course">Like Course</string>
    <string name="registration_completed">Registration completed! Now please login.</string>
    <string name="thanks_for_support">Thanks for support!</string>
    <string name="uploaded_time">13-03-2022</string>
    <string name="uploaded">Uploaded:</string>
</resources>